<resources>
    <string name="app_name">Prevoz</string>
    <string name="error_message">Problem sa konekcijom!</string>
    <string name="message_install_google_maps">Molimo, instalirajte Google Maps.</string>
    <string name="action_navigacija">Navigacija</string>
    <string name="title_activity_prevozi">Prevozi</string>
    <string name="hint_start_location">Odaberite polazište</string>
    <string name="hint_end_location">Odaberite odredište </string>
    <string name="hint_datee">Odaberite datum</string>
    <string name="title_action_search">Pretraga </string>
    <string name="free">Besplatno</string>
    <string name="action_settings">Settings</string>
    <string name="title_viewpager_trazim">Tražim</string>
    <string name="title_viewpager_nudim">Nudim</string>
    <string name="hint_button_add_prevoz">Dodaj novu stanicu</string>
    <string name="hint_button_odaberi_tanicu">Odaberi stanicu</string>
    <string name="button_trazim">Tražim</string>
    <string name="button_nudim">Nudim</string>
    <string name="korisnik">Korisnik</string>
    <string name="vrijeme_polaska">Vrijeme polaska</string>
    <string name="broj_osoba">Broj osoba</string>
    <string name="relacija">Relacija</string>
    <string name="label_settings">Postavke</string>
    <string name="label_logout">Logout</string>
    <string name="welcome_login_message">Dobrodošli</string>
    <string name="login_footer_message">www.prevoz.ba</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="message_search_not_found">Nismo pronašli više prevoza!</string>
    <string name="message_friend_search_not_found">Nismo pronašli nijednog prijatelja!</string>
    <string name="message_welcome">Dobrodošli</string>
    <string name="send_private_message">Pošalji privatnu poruku</string>
    <string name="title_activity_dodajprevoz">NOVI PREVOZ</string>
    <string name="google">Google</string>
    <string name="search_prijatelji_hint">Pretraži prijatelje..</string>
    <string name="hint_time">Vrijeme</string>
    <string name="odustani">Odustani</string>
    <string name="izbrisi">Izbrisi</string>
    <string name="title_stanice">Stanice</string>
    <string name="title_delete_from_friends">Izbrisati iz prijatelja?</string>
    <string name="action_add_station">Dodaj stanicu</string>
    <string name="hint_date">Datum</string>
    <string name="title_date_time">Datum i vrijeme</string>
    <string name="title_tip_prevoza">Tip prevoza</string>
    <string name="message_error_not_sent">Poruka nije poslana!</string>
    <string name="finded">Pronađeno </string>
    <string name="phone_number">Tel. broj </string>
    <string name="prevoza">prevoza </string>
    <string name="refresh">Refresh</string>
    <string name="label_call">Nazovi</string>
    <string name="label_details">Detaljan opis</string>
    <string name="label_send_message">Poruka</string>
    <string name="label_send_sms">SMS</string>
    <string name="email">Email</string>
    <string name="label_add_friend">Pošalji zahtjev</string>
    <string name="label_friends">Prijatelji</string>
    <string name="label_report_person">Prijavi osobu</string>
    <string name="label_friend_request_pending">Zahtjev je poslan</string>
    <string name="label_unfriend_person">Izbrisi iz prijatelja</string>
    <string name="label_block_person">Blokiraj osobu</string>
    <string name="label_frend_request_accept">Prihvati zahtjev</string>
    <string name="label_frend_request_accepted">Prijatelji</string>
    <string name="drive_request_send_successful">Uspjesno ste poslali zahtjev</string>
    <string name="drive_request_send_error">Doslo je do greske!</string>
    <string name="friend_request_send_successful">Uspjesno ste poslali zahtjev za prijateljstvo</string>
    <string name="friend_request_send_error">Doslo je do greske!</string>
    <string name="friend_request_accepted_successful">Sada ste prijatelji</string>
    <string name="friend_request_accepted_error">Doslo je do greske!</string>
    <string name="friend_request_deleted_error">Doslo je do greske!</string>
    <string name="friend_request_deleted_successful">Poništili ste vaš zahtjev za prijateljstvo</string>
    <string name="friend_deleted_successful">Uspjesno izbrisan iz prijatelja</string>
    <string name="send_drive_request">Pošalji zahtjev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="hint_send_chat_message">Napiši poruku...</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_text_drive_request">Vam je poslao zahtjev za prevoz</string>
    <string name="notification_title_new_drive">TNP</string>
    <string name="notification_text_new_drive">Novi Prevoz</string>
    <string name="notification_text_new_message">Vam je poslao poruku</string>
    <string name="notification_text_new_friend_request">Vam je poslao zahtjev za prijateljstvo</string>
    <string name="notification_text_accepted_friend_request">je prihvatio Vaš zahtjev za prijateljstvo</string>
    <string name="facebook_app_id">109280783020526</string>
    <string name="fb_login_protocol_scheme">fb109280783020526</string>
    <string name="google_api_key_places" translatable="false">AIzaSyD0mwUDfA8zY3X5E_4BA6nE7wq6ajo8xzY</string>
    <string name="native_ad_unit_id">ca-app-pub-2967571820925219/2398890882</string>
    <string name="title_activity_sdasda">sdasda</string>
</resources>
