<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent"

    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_vrijeme"
            android:layout_width="match_parent"
            app:title="@string/title_date_time"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear_layout_datum"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <ImageButton
                android:layout_width="wrap_content"
                android:background="@drawable/button_selector"
                android:id="@+id/button_datum"
                android:src="@drawable/ic_date_range_black_90dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:id="@+id/tv_datum"
                android:textAlignment="center"
                android:text="@string/hint_date"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textAllCaps="true"
                android:padding="1dp"
                android:layout_height="wrap_content" >



            </TextView>



        </LinearLayout>



        <LinearLayout

            android:orientation="vertical"
            android:id="@+id/relative_layout_vrijeme"
            android:layout_below="@id/linear_layout_datum"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/button_vrijeme"
                android:layout_width="wrap_content"
               android:background="@drawable/button_selector"
                android:src="@drawable/ic_access_time_black_90dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:textAllCaps="true"
                android:id="@+id/tv_vrijeme"
                android:padding="1dp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/hint_time"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_gravity="bottom|right"

        android:id="@+id/button_next"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:text="NEXT"
        android:src="@drawable/ic_next_24dp"
        app:fabSize="normal"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        />


</android.support.design.widget.CoordinatorLayout>